# rust-android-example

./: README.md
android/app/: build.gradle
android/app/src/androidTest/java/com/example/android/: ExampleInstrumentedTest.kt
android/app/src/main/java/com/example/android/: MainActivity.kt
android/gradle/wrapper/: gradle-wrapper.properties
rust/: Cargo.toml
rust/src/: bitmap.rs  lib.rs
